src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Advanced_Directives_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advance Directives Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_Directives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advance Directives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_String__c</fullName>
        <formula>IF(Today()&lt;Birthdate, &quot;Check the Date!&quot;,

TEXT(IF(YEAR(Today())=YEAR(Birthdate),0,IF(YEAR(Today())-YEAR(Birthdate)=1,IF(MONTH(Today())=MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),0,1),IF(MONTH(Today())&lt;MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),1,0),1)),IF(MONTH(Today())-MONTH(Birthdate)&lt;0,YEAR(Today())-YEAR(Birthdate)-1,IF(MONTH(Today())=MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),YEAR(Today())-YEAR(Birthdate)-1,YEAR(Today())-YEAR(Birthdate)),YEAR(Today())-YEAR(Birthdate)))))) &amp; &quot; year(s), &quot; &amp;

TEXT(IF(YEAR(Today())=YEAR(Birthdate),IF(MONTH(Today())=MONTH(Birthdate),0,IF(MONTH(Today())&gt;MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),MONTH(Today())-MONTH(Birthdate)-1,MONTH(Today())-MONTH(Birthdate)),0)),IF(MONTH(Today())=MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),11,0),IF(MONTH(Today())&gt;MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),MONTH(Today())-MONTH(Birthdate)-1,MONTH(Today())-MONTH(Birthdate)),IF(MONTH(Today())&lt;MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),11-(MONTH(Birthdate)-MONTH(Today())),12-(MONTH(Birthdate)-MONTH(Today()))),12-(MONTH(Birthdate)-MONTH(Today()))))))) &amp; &quot; month(s), &amp; &quot; &amp;

TEXT(IF(DAY(Today())&gt;=DAY(Birthdate),DAY(Today())-DAY(Birthdate),31-(DAY(Birthdate)-DAY(Today())))) &amp; &quot; day(s)&quot;

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Text__c</fullName>
        <formula>CASE( 1,
IF( (YEAR(TODAY())- Year(Birthdate)) ==1,1,100),&quot;1 Year&quot;,
IF( (YEAR(TODAY())- Year(Birthdate)) &gt; 1,1,200), TEXT(FLOOR(((TODAY()) - (Birthdate)+1)/365.2425)) + &quot; Years&quot; ,
IF(YEAR(TODAY()) -Year(Birthdate)==0 &amp;&amp; DAY(Birthdate) - DAY(TODAY())&lt;=0 &amp;&amp; MONTH(TODAY()) - MONTH(Birthdate)==1 ,1,300 ) , &quot;1 Month&quot;,

IF(YEAR(TODAY()) -Year(Birthdate)==0 &amp;&amp; MONTH(TODAY()) - MONTH(Birthdate)&gt;1,1,400), TEXT(MONTH(TODAY()) - MONTH(Birthdate)) +&quot; Months&quot;,
IF( (YEAR(TODAY()) -Year(Birthdate)==0) &amp;&amp; (MONTH(TODAY()) - MONTH(Birthdate)==0 || MONTH(TODAY()) - MONTH(Birthdate)==1) &amp;&amp; (DAY(TODAY() -DAY(Birthdate) )==1),1,500), &quot;1 Day&quot;,

IF( (YEAR(TODAY()) -Year(Birthdate)==0) &amp;&amp; (MONTH(TODAY()) - MONTH(Birthdate)==0 || MONTH(TODAY()) - MONTH(Birthdate)==1) &amp;&amp; (DAY(TODAY() -DAY(Birthdate) )&gt;1),1,600), TEXT( DAY(TODAY() -DAY(Birthdate) ))+&quot; Days&quot;,
&quot;0&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY()-Birthdate +1)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_days__c</fullName>
        <formula>TEXT(IF(DAY(Today())&gt;=DAY(Birthdate),DAY(Today())-DAY(Birthdate),30-(DAY(Birthdate)-DAY(Today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age_days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_month__c</fullName>
        <formula>TEXT(IF(YEAR(Today())=YEAR(Birthdate),IF(MONTH(Today())=MONTH(Birthdate),0,IF(MONTH(Today())&gt;MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),MONTH(Today())-MONTH(Birthdate)-1,MONTH(Today())-MONTH(Birthdate)),0)),IF(MONTH(Today())=MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),11,0),IF(MONTH(Today())&gt;MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),MONTH(Today())-MONTH(Birthdate)-1,MONTH(Today())-MONTH(Birthdate)),IF(MONTH(Today())&lt;MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),11-(MONTH(Birthdate)-MONTH(Today())),12-(MONTH(Birthdate)-MONTH(Today()))),12-(MONTH(Birthdate)-MONTH(Today())))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age_month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_year__c</fullName>
        <formula>TEXT(IF(YEAR(Today())=YEAR(Birthdate),0,IF(YEAR(Today())-YEAR(Birthdate)=1,IF(MONTH(Today())=MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),0,1),IF(MONTH(Today())&lt;MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),1,0),1)),IF(MONTH(Today())-MONTH(Birthdate)&lt;0,YEAR(Today())-YEAR(Birthdate)-1,IF(MONTH(Today())=MONTH(Birthdate),IF(DAY(Today())&lt;DAY(Birthdate),YEAR(Today())-YEAR(Birthdate)-1,YEAR(Today())-YEAR(Birthdate)),YEAR(Today())-YEAR(Birthdate))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age_year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avatar_ID__c</fullName>
        <label>Billing ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avatar_Source_System__c</fullName>
        <label>Billing System</label>
        <picklist>
            <picklistValues>
                <fullName>AVATAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/RMIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avatar_Unique_ID__c</fullName>
        <description>Using this to indicate whether record has been updated from AVATAR.  Consists of PATID-FACILITY</description>
        <externalId>true</externalId>
        <label>Avatar Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Checking_Account_Location__c</fullName>
        <label>Checking Account Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Status_Other__c</fullName>
        <label>Code Status Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Status__c</fullName>
        <label>Code Status</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Name_from_Account__c</fullName>
        <formula>Account.Custom_Account_Contact__r.FirstName &amp; &quot; &quot; &amp; Account.Custom_Account_Contact__r.LastName</formula>
        <label>Contact Name from Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Medications__c</fullName>
        <label>Current Medications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_the_person_Identify__c</fullName>
        <label>Person Gender Other than legal</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnicity_Picklist__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Aboriginal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balkan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Isles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech and Slovak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East and Southeast Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indo-Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin, Central, South American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maghrebi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scandinavian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western European</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Annual_Income__c</fullName>
        <label>Family Annual Income</label>
        <picklist>
            <picklistValues>
                <fullName>15,000 or under</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15,001 - 25,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25,001 - 35,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35,001 - 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,001 - 65,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65,001 - 80,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80,001 - 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 100,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Member_Other__c</fullName>
        <label>Family Members / Other / Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family_Military_Involvement_Branch__c</fullName>
        <label>Family Military Involvement Branch</label>
        <picklist>
            <controllingField>Family_Military_Involvement__c</controllingField>
            <picklistValues>
                <fullName>Air Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Military_Involvement__c</fullName>
        <label>Family Military Involvement</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Native_American_Ancestry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Native American Ancestry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Native_American_Tribe__c</fullName>
        <label>Family Native American Tribe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Prior_Military_Involvement_Date__c</fullName>
        <label>Family Prior Military Involvement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinancialMCD__c</fullName>
        <label>Financial MCD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinancialSS__c</fullName>
        <label>Financial SS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Name_SoundEx_Key__c</fullName>
        <label>First Name SoundEx Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flavor__c</fullName>
        <description>This field will contain the Record type name of the referral from where the PBS is created. This value will be used by developers to conditionally render stuff on PBS page and related objects - Sravan: Sep 11, 2015</description>
        <label>Flavor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingMechanism__c</fullName>
        <label>Funding Mechanism</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Identity__c</fullName>
        <label>Gender Identity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <inlineHelpText>Select the person&apos;s legal gender</inlineHelpText>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guardian1_Name__c</fullName>
        <label>Guardian1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian2_Name__c</fullName>
        <label>Guardian2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_1_Address__c</fullName>
        <label>Guardian 1 Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guardian_1_E_Mail__c</fullName>
        <label>Guardian 1 E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guardian_2_Address__c</fullName>
        <label>Guardian 2 Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guardian_2_E_Mail__c</fullName>
        <label>Guardian 2 E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guardian_2_Phone_Number__c</fullName>
        <label>Guardian 2 Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guardian_Phone_Number__c</fullName>
        <label>Guardian 1 Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guardianship_Type__c</fullName>
        <label>Guardianship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Guardianship/Conservatorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Guardianship/Conservatorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <description>Initials of PBS. Used for reporting reasons.</description>
        <formula>LEFT(FirstName, 1) &amp; LEFT(LastName, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_SoundEx_Key__c</fullName>
        <label>Last Name SoundEx Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Guardianship_Status__c</fullName>
        <label>Legal/Guardianship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Civil Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservator/Conservatorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kinship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Guardianship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Assumes Guardianship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Placement Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Education__c</fullName>
        <label>Highest Level of Education</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+ Years Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kindergarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4+ Years College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year Vocational/Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years Vocational/Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+ Years Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Secondary Transition Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Information__c</fullName>
        <label>Life Insurance Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_County__c</fullName>
        <label>Mailing County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_2__c</fullName>
        <label>Mailing Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medicaid_ID__c</fullName>
        <label>Medicaid ID</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Medicaid_Type__c</fullName>
        <label>Medicaid Type</label>
        <picklist>
            <picklistValues>
                <fullName>OSIP-M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHP+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300% Rule</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Verbal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Verbal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Information__c</fullName>
        <label>Other Contact Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_County__c</fullName>
        <label>Other County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_ID_Description__c</fullName>
        <label>Other ID Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_ID__c</fullName>
        <label>Other ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Street_2__c</fullName>
        <label>Other Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBS_Identifier__c</fullName>
        <description>System assigned a unique 10-digit number to a Person Being Served upon creation.</description>
        <displayFormat>{0000000000}</displayFormat>
        <label>Person #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PRIME_Number__c</fullName>
        <label>PRIME Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Guardianship_Conservatorship__c</fullName>
        <label>Partial Guardianship/Conservatorship</label>
        <picklist>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement Decisions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Person_Being_Referred__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Referred</label>
        <referenceTo>Person_Being_Referred__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_First_Name__c</fullName>
        <label>Preferred First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Last_Name__c</fullName>
        <label>Preferred Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepaid_burial_information__c</fullName>
        <label>Prepaid Burial Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Client_Indicator__c</fullName>
        <label>Primary Client-Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <picklist>
            <picklistValues>
                <fullName>Afghani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bielorussian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cajun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cantonese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English creoles- Belize, Guyanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French Creole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haitian Creole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hmong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icelandic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India, n.e.c.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jamaican Creole</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Referring_Provider_Phone__c</fullName>
        <label>Primary Referring Provider Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Referring_Provider__c</fullName>
        <label>Primary Referring Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSDI__c</fullName>
        <label>RSDI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <picklist>
            <picklistValues>
                <fullName>African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Indian/Alaskan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian/Pacific Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caucasian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Racial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSI__c</fullName>
        <label>SSI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Savings_Account_location__c</fullName>
        <label>Savings Account location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Referring_Provider_Phone__c</fullName>
        <label>Secondary Referring Provider Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Referring_Provider__c</fullName>
        <label>Secondary Referring Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Line_from_2nd_Referring_Provider__c</fullName>
        <label>Service Line from 2nd Referring Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Line_from_Referring_Provider__c</fullName>
        <label>Service Line from Referring Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sign Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UCI_ID__c</fullName>
        <description>California Address Only</description>
        <inlineHelpText>California Address Only</inlineHelpText>
        <label>UCI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>